src/index.css
@import url('https://fonts.googleapis.com/css?family=Oswald:300,400,600');
@import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');

body {
  margin: 0;
  padding: 0;
  font-size: 24pt;
  font-family: 'Oswald', sans-serif;
}

#root {
  height: 100%;
}

h2 {
  margin: 15px 0;
}

.oswald-light {
  font-family: 'Oswald', sans-serif;
  font-weight: 200;
  font-style: normal;
}

.oswald-bold {
  font-family: 'Oswald', sans-serif;
  font-weight: 700;
  font-style: normal;
}

.App {
  display: flex;
  flex-flow: row wrap;
}
.App > * {
  flex: 1 100%;
}
.bg {
  background: #ff8f00;
}


/* Medium screens */
@media all and (max-width: 699px) {
  /* Hide Sidbars */
  .sidebar { display: none; }
}

/* Large screens */
@media all and (min-width: 700px) {
  /* We invert order of first sidebar and main
   * And tell the main element to take 8x as much width as the other two sidebars
   */
  .sidebar { flex: 1 1px; display: block; }
  .content { flex: 8 0px; }
}

